--- a/grails-app/assets/javascripts/todo/todo/templates/crudTodo.tpl.html
+++ b/grails-app/assets/javascripts/todo/todo/templates/crudTodo.tpl.html
@@ -18,13 +18,22 @@ O que precisa ser feito?"/>
                 <ul class="list-group">
                     <li ng-repeat="todo in vm.todoList" class="list-group-item">
                         <div class="view">
+                            <div class="col-md-12">
 
-                            <label>{{todo.descricao}}</label>
-                            <button class="btn btn-primary" ng-click="vm.edit(todo.id)"><span
-                                    class="glyphicon">&#x270f;</span></button>
+                                <input class="toggle" type="checkbox" ng-model="todo.finalizado"
+                                       ng-change="toggleCompleted(todo)">
 
-                            <button class="btn btn-danger" ng-click="vm.delete(todo)"><span
-                                    class="glyphicon">&#xe014;</span></button>
+                                <label style="{{todo.finalizado ? 'text-decoration: line-through;' : ''}} font-size: 20px;">{{todo.descricao}}</label>
+                                <button class="btn btn-danger" style="float: right;" ng-click="vm.delete(todo)"><i class="fas fa-trash"></i>
+
+                                </button>
+                                <button class="btn btn-primary" style="float: right;" ng-click="vm.edit(todo.id)"><i class="fas fa-edit"></i>
+
+                                </button>
+
+
+
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -39,5 +48,6 @@ O que precisa ser feito?"/>
     </div>
 
     </div>
+
 
 </main><!-- /.container -->
